[package]
name = "rusty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.5.1"
#lambda_http = "0.4.0"
serde = "1.0.127"
serde_json = "1.0.66"
tokio = { version = "1.10.0", features=["macros"] }
#aws_lambda_events = "0.4.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
#openssl = { version = "=0.10.33", features = ["vendored"] }
openssl = "0.10.38"
#slack = "0.25.0"
regex = "^1"
